--- a/components/Blog.module.css
+++ b/components/Blog.module.css
@@ -1,6 +1,6 @@
 .blog {
     padding: var(--spacing-2xl) 0;
-    background-color: var(--color-black);
+    background-color: var(--bg-primary);
     position: relative;
 }
 
@@ -19,7 +19,7 @@
 
 .subtitle {
     text-align: center;
-    color: var(--color-gray-400);
+    color: var(--text-secondary);
     font-size: var(--font-size-lg);
     margin-bottom: var(--spacing-xl);
 }
